Align rgb values

--- a/ansicolor.sty
+++ b/ansicolor.sty
@@ -4,248 +4,248 @@
 \RequirePackage{ifthen}
 
 \newcommand{\ansicolor@set}[1]{%
-	\ifthenelse{#1 =   0}{\definecolor{ansicolor@cur}{RGB}{0,0,0}}{}%
-	\ifthenelse{#1 =   1}{\definecolor{ansicolor@cur}{RGB}{128,0,0}}{}%
-	\ifthenelse{#1 =   2}{\definecolor{ansicolor@cur}{RGB}{0,128,0}}{}%
-	\ifthenelse{#1 =   3}{\definecolor{ansicolor@cur}{RGB}{128,128,0}}{}%
-	\ifthenelse{#1 =   4}{\definecolor{ansicolor@cur}{RGB}{0,0,128}}{}%
-	\ifthenelse{#1 =   5}{\definecolor{ansicolor@cur}{RGB}{128,0,128}}{}%
-	\ifthenelse{#1 =   6}{\definecolor{ansicolor@cur}{RGB}{0,128,128}}{}%
+	\ifthenelse{#1 =   0}{\definecolor{ansicolor@cur}{RGB}{  0,  0,  0}}{}%
+	\ifthenelse{#1 =   1}{\definecolor{ansicolor@cur}{RGB}{128,  0,  0}}{}%
+	\ifthenelse{#1 =   2}{\definecolor{ansicolor@cur}{RGB}{  0,128,  0}}{}%
+	\ifthenelse{#1 =   3}{\definecolor{ansicolor@cur}{RGB}{128,128,  0}}{}%
+	\ifthenelse{#1 =   4}{\definecolor{ansicolor@cur}{RGB}{  0,  0,128}}{}%
+	\ifthenelse{#1 =   5}{\definecolor{ansicolor@cur}{RGB}{128,  0,128}}{}%
+	\ifthenelse{#1 =   6}{\definecolor{ansicolor@cur}{RGB}{  0,128,128}}{}%
 	\ifthenelse{#1 =   7}{\definecolor{ansicolor@cur}{RGB}{192,192,192}}{}%
 	\ifthenelse{#1 =   8}{\definecolor{ansicolor@cur}{RGB}{128,128,128}}{}%
-	\ifthenelse{#1 =   9}{\definecolor{ansicolor@cur}{RGB}{255,0,0}}{}%
-	\ifthenelse{#1 =  10}{\definecolor{ansicolor@cur}{RGB}{0,255,0}}{}%
-	\ifthenelse{#1 =  11}{\definecolor{ansicolor@cur}{RGB}{255,255,0}}{}%
-	\ifthenelse{#1 =  12}{\definecolor{ansicolor@cur}{RGB}{0,0,255}}{}%
-	\ifthenelse{#1 =  13}{\definecolor{ansicolor@cur}{RGB}{255,0,255}}{}%
-	\ifthenelse{#1 =  14}{\definecolor{ansicolor@cur}{RGB}{0,255,255}}{}%
+	\ifthenelse{#1 =   9}{\definecolor{ansicolor@cur}{RGB}{255,  0,  0}}{}%
+	\ifthenelse{#1 =  10}{\definecolor{ansicolor@cur}{RGB}{  0,255,  0}}{}%
+	\ifthenelse{#1 =  11}{\definecolor{ansicolor@cur}{RGB}{255,255,  0}}{}%
+	\ifthenelse{#1 =  12}{\definecolor{ansicolor@cur}{RGB}{  0,  0,255}}{}%
+	\ifthenelse{#1 =  13}{\definecolor{ansicolor@cur}{RGB}{255,  0,255}}{}%
+	\ifthenelse{#1 =  14}{\definecolor{ansicolor@cur}{RGB}{  0,255,255}}{}%
 	\ifthenelse{#1 =  15}{\definecolor{ansicolor@cur}{RGB}{255,255,255}}{}%
-	\ifthenelse{#1 =  16}{\definecolor{ansicolor@cur}{RGB}{0,0,0}}{}%
-	\ifthenelse{#1 =  17}{\definecolor{ansicolor@cur}{RGB}{0,0,95}}{}%
-	\ifthenelse{#1 =  18}{\definecolor{ansicolor@cur}{RGB}{0,0,135}}{}%
-	\ifthenelse{#1 =  19}{\definecolor{ansicolor@cur}{RGB}{0,0,175}}{}%
-	\ifthenelse{#1 =  20}{\definecolor{ansicolor@cur}{RGB}{0,0,215}}{}%
-	\ifthenelse{#1 =  21}{\definecolor{ansicolor@cur}{RGB}{0,0,255}}{}%
-	\ifthenelse{#1 =  22}{\definecolor{ansicolor@cur}{RGB}{0,95,0}}{}%
-	\ifthenelse{#1 =  23}{\definecolor{ansicolor@cur}{RGB}{0,95,95}}{}%
-	\ifthenelse{#1 =  24}{\definecolor{ansicolor@cur}{RGB}{0,95,135}}{}%
-	\ifthenelse{#1 =  25}{\definecolor{ansicolor@cur}{RGB}{0,95,175}}{}%
-	\ifthenelse{#1 =  26}{\definecolor{ansicolor@cur}{RGB}{0,95,215}}{}%
-	\ifthenelse{#1 =  27}{\definecolor{ansicolor@cur}{RGB}{0,95,255}}{}%
-	\ifthenelse{#1 =  28}{\definecolor{ansicolor@cur}{RGB}{0,135,0}}{}%
-	\ifthenelse{#1 =  29}{\definecolor{ansicolor@cur}{RGB}{0,135,95}}{}%
-	\ifthenelse{#1 =  30}{\definecolor{ansicolor@cur}{RGB}{0,135,135}}{}%
-	\ifthenelse{#1 =  31}{\definecolor{ansicolor@cur}{RGB}{0,135,175}}{}%
-	\ifthenelse{#1 =  32}{\definecolor{ansicolor@cur}{RGB}{0,135,215}}{}%
-	\ifthenelse{#1 =  33}{\definecolor{ansicolor@cur}{RGB}{0,135,255}}{}%
-	\ifthenelse{#1 =  34}{\definecolor{ansicolor@cur}{RGB}{0,175,0}}{}%
-	\ifthenelse{#1 =  35}{\definecolor{ansicolor@cur}{RGB}{0,175,95}}{}%
-	\ifthenelse{#1 =  36}{\definecolor{ansicolor@cur}{RGB}{0,175,135}}{}%
-	\ifthenelse{#1 =  37}{\definecolor{ansicolor@cur}{RGB}{0,175,175}}{}%
-	\ifthenelse{#1 =  38}{\definecolor{ansicolor@cur}{RGB}{0,175,215}}{}%
-	\ifthenelse{#1 =  39}{\definecolor{ansicolor@cur}{RGB}{0,175,255}}{}%
-	\ifthenelse{#1 =  40}{\definecolor{ansicolor@cur}{RGB}{0,215,0}}{}%
-	\ifthenelse{#1 =  41}{\definecolor{ansicolor@cur}{RGB}{0,215,95}}{}%
-	\ifthenelse{#1 =  42}{\definecolor{ansicolor@cur}{RGB}{0,215,135}}{}%
-	\ifthenelse{#1 =  43}{\definecolor{ansicolor@cur}{RGB}{0,215,175}}{}%
-	\ifthenelse{#1 =  44}{\definecolor{ansicolor@cur}{RGB}{0,215,215}}{}%
-	\ifthenelse{#1 =  45}{\definecolor{ansicolor@cur}{RGB}{0,215,255}}{}%
-	\ifthenelse{#1 =  46}{\definecolor{ansicolor@cur}{RGB}{0,255,0}}{}%
-	\ifthenelse{#1 =  47}{\definecolor{ansicolor@cur}{RGB}{0,255,95}}{}%
-	\ifthenelse{#1 =  48}{\definecolor{ansicolor@cur}{RGB}{0,255,135}}{}%
-	\ifthenelse{#1 =  49}{\definecolor{ansicolor@cur}{RGB}{0,255,175}}{}%
-	\ifthenelse{#1 =  50}{\definecolor{ansicolor@cur}{RGB}{0,255,215}}{}%
-	\ifthenelse{#1 =  51}{\definecolor{ansicolor@cur}{RGB}{0,255,255}}{}%
-	\ifthenelse{#1 =  52}{\definecolor{ansicolor@cur}{RGB}{95,0,0}}{}%
-	\ifthenelse{#1 =  53}{\definecolor{ansicolor@cur}{RGB}{95,0,95}}{}%
-	\ifthenelse{#1 =  54}{\definecolor{ansicolor@cur}{RGB}{95,0,135}}{}%
-	\ifthenelse{#1 =  55}{\definecolor{ansicolor@cur}{RGB}{95,0,175}}{}%
-	\ifthenelse{#1 =  56}{\definecolor{ansicolor@cur}{RGB}{95,0,215}}{}%
-	\ifthenelse{#1 =  57}{\definecolor{ansicolor@cur}{RGB}{95,0,255}}{}%
-	\ifthenelse{#1 =  58}{\definecolor{ansicolor@cur}{RGB}{95,95,0}}{}%
-	\ifthenelse{#1 =  59}{\definecolor{ansicolor@cur}{RGB}{95,95,95}}{}%
-	\ifthenelse{#1 =  60}{\definecolor{ansicolor@cur}{RGB}{95,95,135}}{}%
-	\ifthenelse{#1 =  61}{\definecolor{ansicolor@cur}{RGB}{95,95,175}}{}%
-	\ifthenelse{#1 =  62}{\definecolor{ansicolor@cur}{RGB}{95,95,215}}{}%
-	\ifthenelse{#1 =  63}{\definecolor{ansicolor@cur}{RGB}{95,95,255}}{}%
-	\ifthenelse{#1 =  64}{\definecolor{ansicolor@cur}{RGB}{95,135,0}}{}%
-	\ifthenelse{#1 =  65}{\definecolor{ansicolor@cur}{RGB}{95,135,95}}{}%
-	\ifthenelse{#1 =  66}{\definecolor{ansicolor@cur}{RGB}{95,135,135}}{}%
-	\ifthenelse{#1 =  67}{\definecolor{ansicolor@cur}{RGB}{95,135,175}}{}%
-	\ifthenelse{#1 =  68}{\definecolor{ansicolor@cur}{RGB}{95,135,215}}{}%
-	\ifthenelse{#1 =  69}{\definecolor{ansicolor@cur}{RGB}{95,135,255}}{}%
-	\ifthenelse{#1 =  70}{\definecolor{ansicolor@cur}{RGB}{95,175,0}}{}%
-	\ifthenelse{#1 =  71}{\definecolor{ansicolor@cur}{RGB}{95,175,95}}{}%
-	\ifthenelse{#1 =  72}{\definecolor{ansicolor@cur}{RGB}{95,175,135}}{}%
-	\ifthenelse{#1 =  73}{\definecolor{ansicolor@cur}{RGB}{95,175,175}}{}%
-	\ifthenelse{#1 =  74}{\definecolor{ansicolor@cur}{RGB}{95,175,215}}{}%
-	\ifthenelse{#1 =  75}{\definecolor{ansicolor@cur}{RGB}{95,175,255}}{}%
-	\ifthenelse{#1 =  76}{\definecolor{ansicolor@cur}{RGB}{95,215,0}}{}%
-	\ifthenelse{#1 =  77}{\definecolor{ansicolor@cur}{RGB}{95,215,95}}{}%
-	\ifthenelse{#1 =  78}{\definecolor{ansicolor@cur}{RGB}{95,215,135}}{}%
-	\ifthenelse{#1 =  79}{\definecolor{ansicolor@cur}{RGB}{95,215,175}}{}%
-	\ifthenelse{#1 =  80}{\definecolor{ansicolor@cur}{RGB}{95,215,215}}{}%
-	\ifthenelse{#1 =  81}{\definecolor{ansicolor@cur}{RGB}{95,215,255}}{}%
-	\ifthenelse{#1 =  82}{\definecolor{ansicolor@cur}{RGB}{95,255,0}}{}%
-	\ifthenelse{#1 =  83}{\definecolor{ansicolor@cur}{RGB}{95,255,95}}{}%
-	\ifthenelse{#1 =  84}{\definecolor{ansicolor@cur}{RGB}{95,255,135}}{}%
-	\ifthenelse{#1 =  85}{\definecolor{ansicolor@cur}{RGB}{95,255,175}}{}%
-	\ifthenelse{#1 =  86}{\definecolor{ansicolor@cur}{RGB}{95,255,215}}{}%
-	\ifthenelse{#1 =  87}{\definecolor{ansicolor@cur}{RGB}{95,255,255}}{}%
-	\ifthenelse{#1 =  88}{\definecolor{ansicolor@cur}{RGB}{135,0,0}}{}%
-	\ifthenelse{#1 =  89}{\definecolor{ansicolor@cur}{RGB}{135,0,95}}{}%
-	\ifthenelse{#1 =  90}{\definecolor{ansicolor@cur}{RGB}{135,0,135}}{}%
-	\ifthenelse{#1 =  91}{\definecolor{ansicolor@cur}{RGB}{135,0,175}}{}%
-	\ifthenelse{#1 =  92}{\definecolor{ansicolor@cur}{RGB}{135,0,215}}{}%
-	\ifthenelse{#1 =  93}{\definecolor{ansicolor@cur}{RGB}{135,0,255}}{}%
-	\ifthenelse{#1 =  94}{\definecolor{ansicolor@cur}{RGB}{135,95,0}}{}%
-	\ifthenelse{#1 =  95}{\definecolor{ansicolor@cur}{RGB}{135,95,95}}{}%
-	\ifthenelse{#1 =  96}{\definecolor{ansicolor@cur}{RGB}{135,95,135}}{}%
-	\ifthenelse{#1 =  97}{\definecolor{ansicolor@cur}{RGB}{135,95,175}}{}%
-	\ifthenelse{#1 =  98}{\definecolor{ansicolor@cur}{RGB}{135,95,215}}{}%
-	\ifthenelse{#1 =  99}{\definecolor{ansicolor@cur}{RGB}{135,95,255}}{}%
-	\ifthenelse{#1 = 100}{\definecolor{ansicolor@cur}{RGB}{135,135,0}}{}%
-	\ifthenelse{#1 = 101}{\definecolor{ansicolor@cur}{RGB}{135,135,95}}{}%
+	\ifthenelse{#1 =  16}{\definecolor{ansicolor@cur}{RGB}{  0,  0,  0}}{}%
+	\ifthenelse{#1 =  17}{\definecolor{ansicolor@cur}{RGB}{  0,  0, 95}}{}%
+	\ifthenelse{#1 =  18}{\definecolor{ansicolor@cur}{RGB}{  0,  0,135}}{}%
+	\ifthenelse{#1 =  19}{\definecolor{ansicolor@cur}{RGB}{  0,  0,175}}{}%
+	\ifthenelse{#1 =  20}{\definecolor{ansicolor@cur}{RGB}{  0,  0,215}}{}%
+	\ifthenelse{#1 =  21}{\definecolor{ansicolor@cur}{RGB}{  0,  0,255}}{}%
+	\ifthenelse{#1 =  22}{\definecolor{ansicolor@cur}{RGB}{  0, 95,  0}}{}%
+	\ifthenelse{#1 =  23}{\definecolor{ansicolor@cur}{RGB}{  0, 95, 95}}{}%
+	\ifthenelse{#1 =  24}{\definecolor{ansicolor@cur}{RGB}{  0, 95,135}}{}%
+	\ifthenelse{#1 =  25}{\definecolor{ansicolor@cur}{RGB}{  0, 95,175}}{}%
+	\ifthenelse{#1 =  26}{\definecolor{ansicolor@cur}{RGB}{  0, 95,215}}{}%
+	\ifthenelse{#1 =  27}{\definecolor{ansicolor@cur}{RGB}{  0, 95,255}}{}%
+	\ifthenelse{#1 =  28}{\definecolor{ansicolor@cur}{RGB}{  0,135,  0}}{}%
+	\ifthenelse{#1 =  29}{\definecolor{ansicolor@cur}{RGB}{  0,135, 95}}{}%
+	\ifthenelse{#1 =  30}{\definecolor{ansicolor@cur}{RGB}{  0,135,135}}{}%
+	\ifthenelse{#1 =  31}{\definecolor{ansicolor@cur}{RGB}{  0,135,175}}{}%
+	\ifthenelse{#1 =  32}{\definecolor{ansicolor@cur}{RGB}{  0,135,215}}{}%
+	\ifthenelse{#1 =  33}{\definecolor{ansicolor@cur}{RGB}{  0,135,255}}{}%
+	\ifthenelse{#1 =  34}{\definecolor{ansicolor@cur}{RGB}{  0,175,  0}}{}%
+	\ifthenelse{#1 =  35}{\definecolor{ansicolor@cur}{RGB}{  0,175, 95}}{}%
+	\ifthenelse{#1 =  36}{\definecolor{ansicolor@cur}{RGB}{  0,175,135}}{}%
+	\ifthenelse{#1 =  37}{\definecolor{ansicolor@cur}{RGB}{  0,175,175}}{}%
+	\ifthenelse{#1 =  38}{\definecolor{ansicolor@cur}{RGB}{  0,175,215}}{}%
+	\ifthenelse{#1 =  39}{\definecolor{ansicolor@cur}{RGB}{  0,175,255}}{}%
+	\ifthenelse{#1 =  40}{\definecolor{ansicolor@cur}{RGB}{  0,215,  0}}{}%
+	\ifthenelse{#1 =  41}{\definecolor{ansicolor@cur}{RGB}{  0,215, 95}}{}%
+	\ifthenelse{#1 =  42}{\definecolor{ansicolor@cur}{RGB}{  0,215,135}}{}%
+	\ifthenelse{#1 =  43}{\definecolor{ansicolor@cur}{RGB}{  0,215,175}}{}%
+	\ifthenelse{#1 =  44}{\definecolor{ansicolor@cur}{RGB}{  0,215,215}}{}%
+	\ifthenelse{#1 =  45}{\definecolor{ansicolor@cur}{RGB}{  0,215,255}}{}%
+	\ifthenelse{#1 =  46}{\definecolor{ansicolor@cur}{RGB}{  0,255,  0}}{}%
+	\ifthenelse{#1 =  47}{\definecolor{ansicolor@cur}{RGB}{  0,255, 95}}{}%
+	\ifthenelse{#1 =  48}{\definecolor{ansicolor@cur}{RGB}{  0,255,135}}{}%
+	\ifthenelse{#1 =  49}{\definecolor{ansicolor@cur}{RGB}{  0,255,175}}{}%
+	\ifthenelse{#1 =  50}{\definecolor{ansicolor@cur}{RGB}{  0,255,215}}{}%
+	\ifthenelse{#1 =  51}{\definecolor{ansicolor@cur}{RGB}{  0,255,255}}{}%
+	\ifthenelse{#1 =  52}{\definecolor{ansicolor@cur}{RGB}{ 95,  0,  0}}{}%
+	\ifthenelse{#1 =  53}{\definecolor{ansicolor@cur}{RGB}{ 95,  0, 95}}{}%
+	\ifthenelse{#1 =  54}{\definecolor{ansicolor@cur}{RGB}{ 95,  0,135}}{}%
+	\ifthenelse{#1 =  55}{\definecolor{ansicolor@cur}{RGB}{ 95,  0,175}}{}%
+	\ifthenelse{#1 =  56}{\definecolor{ansicolor@cur}{RGB}{ 95,  0,215}}{}%
+	\ifthenelse{#1 =  57}{\definecolor{ansicolor@cur}{RGB}{ 95,  0,255}}{}%
+	\ifthenelse{#1 =  58}{\definecolor{ansicolor@cur}{RGB}{ 95, 95,  0}}{}%
+	\ifthenelse{#1 =  59}{\definecolor{ansicolor@cur}{RGB}{ 95, 95, 95}}{}%
+	\ifthenelse{#1 =  60}{\definecolor{ansicolor@cur}{RGB}{ 95, 95,135}}{}%
+	\ifthenelse{#1 =  61}{\definecolor{ansicolor@cur}{RGB}{ 95, 95,175}}{}%
+	\ifthenelse{#1 =  62}{\definecolor{ansicolor@cur}{RGB}{ 95, 95,215}}{}%
+	\ifthenelse{#1 =  63}{\definecolor{ansicolor@cur}{RGB}{ 95, 95,255}}{}%
+	\ifthenelse{#1 =  64}{\definecolor{ansicolor@cur}{RGB}{ 95,135,  0}}{}%
+	\ifthenelse{#1 =  65}{\definecolor{ansicolor@cur}{RGB}{ 95,135, 95}}{}%
+	\ifthenelse{#1 =  66}{\definecolor{ansicolor@cur}{RGB}{ 95,135,135}}{}%
+	\ifthenelse{#1 =  67}{\definecolor{ansicolor@cur}{RGB}{ 95,135,175}}{}%
+	\ifthenelse{#1 =  68}{\definecolor{ansicolor@cur}{RGB}{ 95,135,215}}{}%
+	\ifthenelse{#1 =  69}{\definecolor{ansicolor@cur}{RGB}{ 95,135,255}}{}%
+	\ifthenelse{#1 =  70}{\definecolor{ansicolor@cur}{RGB}{ 95,175,  0}}{}%
+	\ifthenelse{#1 =  71}{\definecolor{ansicolor@cur}{RGB}{ 95,175, 95}}{}%
+	\ifthenelse{#1 =  72}{\definecolor{ansicolor@cur}{RGB}{ 95,175,135}}{}%
+	\ifthenelse{#1 =  73}{\definecolor{ansicolor@cur}{RGB}{ 95,175,175}}{}%
+	\ifthenelse{#1 =  74}{\definecolor{ansicolor@cur}{RGB}{ 95,175,215}}{}%
+	\ifthenelse{#1 =  75}{\definecolor{ansicolor@cur}{RGB}{ 95,175,255}}{}%
+	\ifthenelse{#1 =  76}{\definecolor{ansicolor@cur}{RGB}{ 95,215,  0}}{}%
+	\ifthenelse{#1 =  77}{\definecolor{ansicolor@cur}{RGB}{ 95,215, 95}}{}%
+	\ifthenelse{#1 =  78}{\definecolor{ansicolor@cur}{RGB}{ 95,215,135}}{}%
+	\ifthenelse{#1 =  79}{\definecolor{ansicolor@cur}{RGB}{ 95,215,175}}{}%
+	\ifthenelse{#1 =  80}{\definecolor{ansicolor@cur}{RGB}{ 95,215,215}}{}%
+	\ifthenelse{#1 =  81}{\definecolor{ansicolor@cur}{RGB}{ 95,215,255}}{}%
+	\ifthenelse{#1 =  82}{\definecolor{ansicolor@cur}{RGB}{ 95,255,  0}}{}%
+	\ifthenelse{#1 =  83}{\definecolor{ansicolor@cur}{RGB}{ 95,255, 95}}{}%
+	\ifthenelse{#1 =  84}{\definecolor{ansicolor@cur}{RGB}{ 95,255,135}}{}%
+	\ifthenelse{#1 =  85}{\definecolor{ansicolor@cur}{RGB}{ 95,255,175}}{}%
+	\ifthenelse{#1 =  86}{\definecolor{ansicolor@cur}{RGB}{ 95,255,215}}{}%
+	\ifthenelse{#1 =  87}{\definecolor{ansicolor@cur}{RGB}{ 95,255,255}}{}%
+	\ifthenelse{#1 =  88}{\definecolor{ansicolor@cur}{RGB}{135,  0,  0}}{}%
+	\ifthenelse{#1 =  89}{\definecolor{ansicolor@cur}{RGB}{135,  0, 95}}{}%
+	\ifthenelse{#1 =  90}{\definecolor{ansicolor@cur}{RGB}{135,  0,135}}{}%
+	\ifthenelse{#1 =  91}{\definecolor{ansicolor@cur}{RGB}{135,  0,175}}{}%
+	\ifthenelse{#1 =  92}{\definecolor{ansicolor@cur}{RGB}{135,  0,215}}{}%
+	\ifthenelse{#1 =  93}{\definecolor{ansicolor@cur}{RGB}{135,  0,255}}{}%
+	\ifthenelse{#1 =  94}{\definecolor{ansicolor@cur}{RGB}{135, 95,  0}}{}%
+	\ifthenelse{#1 =  95}{\definecolor{ansicolor@cur}{RGB}{135, 95, 95}}{}%
+	\ifthenelse{#1 =  96}{\definecolor{ansicolor@cur}{RGB}{135, 95,135}}{}%
+	\ifthenelse{#1 =  97}{\definecolor{ansicolor@cur}{RGB}{135, 95,175}}{}%
+	\ifthenelse{#1 =  98}{\definecolor{ansicolor@cur}{RGB}{135, 95,215}}{}%
+	\ifthenelse{#1 =  99}{\definecolor{ansicolor@cur}{RGB}{135, 95,255}}{}%
+	\ifthenelse{#1 = 100}{\definecolor{ansicolor@cur}{RGB}{135,135,  0}}{}%
+	\ifthenelse{#1 = 101}{\definecolor{ansicolor@cur}{RGB}{135,135, 95}}{}%
 	\ifthenelse{#1 = 102}{\definecolor{ansicolor@cur}{RGB}{135,135,135}}{}%
 	\ifthenelse{#1 = 103}{\definecolor{ansicolor@cur}{RGB}{135,135,175}}{}%
 	\ifthenelse{#1 = 104}{\definecolor{ansicolor@cur}{RGB}{135,135,215}}{}%
 	\ifthenelse{#1 = 105}{\definecolor{ansicolor@cur}{RGB}{135,135,255}}{}%
-	\ifthenelse{#1 = 106}{\definecolor{ansicolor@cur}{RGB}{135,175,0}}{}%
-	\ifthenelse{#1 = 107}{\definecolor{ansicolor@cur}{RGB}{135,175,95}}{}%
+	\ifthenelse{#1 = 106}{\definecolor{ansicolor@cur}{RGB}{135,175,  0}}{}%
+	\ifthenelse{#1 = 107}{\definecolor{ansicolor@cur}{RGB}{135,175, 95}}{}%
 	\ifthenelse{#1 = 108}{\definecolor{ansicolor@cur}{RGB}{135,175,135}}{}%
 	\ifthenelse{#1 = 109}{\definecolor{ansicolor@cur}{RGB}{135,175,175}}{}%
 	\ifthenelse{#1 = 110}{\definecolor{ansicolor@cur}{RGB}{135,175,215}}{}%
 	\ifthenelse{#1 = 111}{\definecolor{ansicolor@cur}{RGB}{135,175,255}}{}%
-	\ifthenelse{#1 = 112}{\definecolor{ansicolor@cur}{RGB}{135,215,0}}{}%
-	\ifthenelse{#1 = 113}{\definecolor{ansicolor@cur}{RGB}{135,215,95}}{}%
+	\ifthenelse{#1 = 112}{\definecolor{ansicolor@cur}{RGB}{135,215,  0}}{}%
+	\ifthenelse{#1 = 113}{\definecolor{ansicolor@cur}{RGB}{135,215, 95}}{}%
 	\ifthenelse{#1 = 114}{\definecolor{ansicolor@cur}{RGB}{135,215,135}}{}%
 	\ifthenelse{#1 = 115}{\definecolor{ansicolor@cur}{RGB}{135,215,175}}{}%
 	\ifthenelse{#1 = 116}{\definecolor{ansicolor@cur}{RGB}{135,215,215}}{}%
 	\ifthenelse{#1 = 117}{\definecolor{ansicolor@cur}{RGB}{135,215,255}}{}%
-	\ifthenelse{#1 = 118}{\definecolor{ansicolor@cur}{RGB}{135,255,0}}{}%
-	\ifthenelse{#1 = 119}{\definecolor{ansicolor@cur}{RGB}{135,255,95}}{}%
+	\ifthenelse{#1 = 118}{\definecolor{ansicolor@cur}{RGB}{135,255,  0}}{}%
+	\ifthenelse{#1 = 119}{\definecolor{ansicolor@cur}{RGB}{135,255, 95}}{}%
 	\ifthenelse{#1 = 120}{\definecolor{ansicolor@cur}{RGB}{135,255,135}}{}%
 	\ifthenelse{#1 = 121}{\definecolor{ansicolor@cur}{RGB}{135,255,175}}{}%
 	\ifthenelse{#1 = 122}{\definecolor{ansicolor@cur}{RGB}{135,255,215}}{}%
 	\ifthenelse{#1 = 123}{\definecolor{ansicolor@cur}{RGB}{135,255,255}}{}%
-	\ifthenelse{#1 = 124}{\definecolor{ansicolor@cur}{RGB}{175,0,0}}{}%
-	\ifthenelse{#1 = 125}{\definecolor{ansicolor@cur}{RGB}{175,0,95}}{}%
-	\ifthenelse{#1 = 126}{\definecolor{ansicolor@cur}{RGB}{175,0,135}}{}%
-	\ifthenelse{#1 = 127}{\definecolor{ansicolor@cur}{RGB}{175,0,175}}{}%
-	\ifthenelse{#1 = 128}{\definecolor{ansicolor@cur}{RGB}{175,0,215}}{}%
-	\ifthenelse{#1 = 129}{\definecolor{ansicolor@cur}{RGB}{175,0,255}}{}%
-	\ifthenelse{#1 = 130}{\definecolor{ansicolor@cur}{RGB}{175,95,0}}{}%
-	\ifthenelse{#1 = 131}{\definecolor{ansicolor@cur}{RGB}{175,95,95}}{}%
-	\ifthenelse{#1 = 132}{\definecolor{ansicolor@cur}{RGB}{175,95,135}}{}%
-	\ifthenelse{#1 = 133}{\definecolor{ansicolor@cur}{RGB}{175,95,175}}{}%
-	\ifthenelse{#1 = 134}{\definecolor{ansicolor@cur}{RGB}{175,95,215}}{}%
-	\ifthenelse{#1 = 135}{\definecolor{ansicolor@cur}{RGB}{175,95,255}}{}%
-	\ifthenelse{#1 = 136}{\definecolor{ansicolor@cur}{RGB}{175,135,0}}{}%
-	\ifthenelse{#1 = 137}{\definecolor{ansicolor@cur}{RGB}{175,135,95}}{}%
+	\ifthenelse{#1 = 124}{\definecolor{ansicolor@cur}{RGB}{175,  0,  0}}{}%
+	\ifthenelse{#1 = 125}{\definecolor{ansicolor@cur}{RGB}{175,  0, 95}}{}%
+	\ifthenelse{#1 = 126}{\definecolor{ansicolor@cur}{RGB}{175,  0,135}}{}%
+	\ifthenelse{#1 = 127}{\definecolor{ansicolor@cur}{RGB}{175,  0,175}}{}%
+	\ifthenelse{#1 = 128}{\definecolor{ansicolor@cur}{RGB}{175,  0,215}}{}%
+	\ifthenelse{#1 = 129}{\definecolor{ansicolor@cur}{RGB}{175,  0,255}}{}%
+	\ifthenelse{#1 = 130}{\definecolor{ansicolor@cur}{RGB}{175, 95,  0}}{}%
+	\ifthenelse{#1 = 131}{\definecolor{ansicolor@cur}{RGB}{175, 95, 95}}{}%
+	\ifthenelse{#1 = 132}{\definecolor{ansicolor@cur}{RGB}{175, 95,135}}{}%
+	\ifthenelse{#1 = 133}{\definecolor{ansicolor@cur}{RGB}{175, 95,175}}{}%
+	\ifthenelse{#1 = 134}{\definecolor{ansicolor@cur}{RGB}{175, 95,215}}{}%
+	\ifthenelse{#1 = 135}{\definecolor{ansicolor@cur}{RGB}{175, 95,255}}{}%
+	\ifthenelse{#1 = 136}{\definecolor{ansicolor@cur}{RGB}{175,135,  0}}{}%
+	\ifthenelse{#1 = 137}{\definecolor{ansicolor@cur}{RGB}{175,135, 95}}{}%
 	\ifthenelse{#1 = 138}{\definecolor{ansicolor@cur}{RGB}{175,135,135}}{}%
 	\ifthenelse{#1 = 139}{\definecolor{ansicolor@cur}{RGB}{175,135,175}}{}%
 	\ifthenelse{#1 = 140}{\definecolor{ansicolor@cur}{RGB}{175,135,215}}{}%
 	\ifthenelse{#1 = 141}{\definecolor{ansicolor@cur}{RGB}{175,135,255}}{}%
-	\ifthenelse{#1 = 142}{\definecolor{ansicolor@cur}{RGB}{175,175,0}}{}%
-	\ifthenelse{#1 = 143}{\definecolor{ansicolor@cur}{RGB}{175,175,95}}{}%
+	\ifthenelse{#1 = 142}{\definecolor{ansicolor@cur}{RGB}{175,175,  0}}{}%
+	\ifthenelse{#1 = 143}{\definecolor{ansicolor@cur}{RGB}{175,175, 95}}{}%
 	\ifthenelse{#1 = 144}{\definecolor{ansicolor@cur}{RGB}{175,175,135}}{}%
 	\ifthenelse{#1 = 145}{\definecolor{ansicolor@cur}{RGB}{175,175,175}}{}%
 	\ifthenelse{#1 = 146}{\definecolor{ansicolor@cur}{RGB}{175,175,215}}{}%
 	\ifthenelse{#1 = 147}{\definecolor{ansicolor@cur}{RGB}{175,175,255}}{}%
-	\ifthenelse{#1 = 148}{\definecolor{ansicolor@cur}{RGB}{175,215,0}}{}%
-	\ifthenelse{#1 = 149}{\definecolor{ansicolor@cur}{RGB}{175,215,95}}{}%
+	\ifthenelse{#1 = 148}{\definecolor{ansicolor@cur}{RGB}{175,215,  0}}{}%
+	\ifthenelse{#1 = 149}{\definecolor{ansicolor@cur}{RGB}{175,215, 95}}{}%
 	\ifthenelse{#1 = 150}{\definecolor{ansicolor@cur}{RGB}{175,215,135}}{}%
 	\ifthenelse{#1 = 151}{\definecolor{ansicolor@cur}{RGB}{175,215,175}}{}%
 	\ifthenelse{#1 = 152}{\definecolor{ansicolor@cur}{RGB}{175,215,215}}{}%
 	\ifthenelse{#1 = 153}{\definecolor{ansicolor@cur}{RGB}{175,215,255}}{}%
-	\ifthenelse{#1 = 154}{\definecolor{ansicolor@cur}{RGB}{175,255,0}}{}%
-	\ifthenelse{#1 = 155}{\definecolor{ansicolor@cur}{RGB}{175,255,95}}{}%
+	\ifthenelse{#1 = 154}{\definecolor{ansicolor@cur}{RGB}{175,255,  0}}{}%
+	\ifthenelse{#1 = 155}{\definecolor{ansicolor@cur}{RGB}{175,255, 95}}{}%
 	\ifthenelse{#1 = 156}{\definecolor{ansicolor@cur}{RGB}{175,255,135}}{}%
 	\ifthenelse{#1 = 157}{\definecolor{ansicolor@cur}{RGB}{175,255,175}}{}%
 	\ifthenelse{#1 = 158}{\definecolor{ansicolor@cur}{RGB}{175,255,215}}{}%
 	\ifthenelse{#1 = 159}{\definecolor{ansicolor@cur}{RGB}{175,255,255}}{}%
-	\ifthenelse{#1 = 160}{\definecolor{ansicolor@cur}{RGB}{215,0,0}}{}%
-	\ifthenelse{#1 = 161}{\definecolor{ansicolor@cur}{RGB}{215,0,95}}{}%
-	\ifthenelse{#1 = 162}{\definecolor{ansicolor@cur}{RGB}{215,0,135}}{}%
-	\ifthenelse{#1 = 163}{\definecolor{ansicolor@cur}{RGB}{215,0,175}}{}%
-	\ifthenelse{#1 = 164}{\definecolor{ansicolor@cur}{RGB}{215,0,215}}{}%
-	\ifthenelse{#1 = 165}{\definecolor{ansicolor@cur}{RGB}{215,0,255}}{}%
-	\ifthenelse{#1 = 166}{\definecolor{ansicolor@cur}{RGB}{215,95,0}}{}%
-	\ifthenelse{#1 = 167}{\definecolor{ansicolor@cur}{RGB}{215,95,95}}{}%
-	\ifthenelse{#1 = 168}{\definecolor{ansicolor@cur}{RGB}{215,95,135}}{}%
-	\ifthenelse{#1 = 169}{\definecolor{ansicolor@cur}{RGB}{215,95,175}}{}%
-	\ifthenelse{#1 = 170}{\definecolor{ansicolor@cur}{RGB}{215,95,215}}{}%
-	\ifthenelse{#1 = 171}{\definecolor{ansicolor@cur}{RGB}{215,95,255}}{}%
-	\ifthenelse{#1 = 172}{\definecolor{ansicolor@cur}{RGB}{215,135,0}}{}%
-	\ifthenelse{#1 = 173}{\definecolor{ansicolor@cur}{RGB}{215,135,95}}{}%
+	\ifthenelse{#1 = 160}{\definecolor{ansicolor@cur}{RGB}{215,  0,  0}}{}%
+	\ifthenelse{#1 = 161}{\definecolor{ansicolor@cur}{RGB}{215,  0, 95}}{}%
+	\ifthenelse{#1 = 162}{\definecolor{ansicolor@cur}{RGB}{215,  0,135}}{}%
+	\ifthenelse{#1 = 163}{\definecolor{ansicolor@cur}{RGB}{215,  0,175}}{}%
+	\ifthenelse{#1 = 164}{\definecolor{ansicolor@cur}{RGB}{215,  0,215}}{}%
+	\ifthenelse{#1 = 165}{\definecolor{ansicolor@cur}{RGB}{215,  0,255}}{}%
+	\ifthenelse{#1 = 166}{\definecolor{ansicolor@cur}{RGB}{215, 95,  0}}{}%
+	\ifthenelse{#1 = 167}{\definecolor{ansicolor@cur}{RGB}{215, 95, 95}}{}%
+	\ifthenelse{#1 = 168}{\definecolor{ansicolor@cur}{RGB}{215, 95,135}}{}%
+	\ifthenelse{#1 = 169}{\definecolor{ansicolor@cur}{RGB}{215, 95,175}}{}%
+	\ifthenelse{#1 = 170}{\definecolor{ansicolor@cur}{RGB}{215, 95,215}}{}%
+	\ifthenelse{#1 = 171}{\definecolor{ansicolor@cur}{RGB}{215, 95,255}}{}%
+	\ifthenelse{#1 = 172}{\definecolor{ansicolor@cur}{RGB}{215,135,  0}}{}%
+	\ifthenelse{#1 = 173}{\definecolor{ansicolor@cur}{RGB}{215,135, 95}}{}%
 	\ifthenelse{#1 = 174}{\definecolor{ansicolor@cur}{RGB}{215,135,135}}{}%
 	\ifthenelse{#1 = 175}{\definecolor{ansicolor@cur}{RGB}{215,135,175}}{}%
 	\ifthenelse{#1 = 176}{\definecolor{ansicolor@cur}{RGB}{215,135,215}}{}%
 	\ifthenelse{#1 = 177}{\definecolor{ansicolor@cur}{RGB}{215,135,255}}{}%
-	\ifthenelse{#1 = 178}{\definecolor{ansicolor@cur}{RGB}{215,175,0}}{}%
-	\ifthenelse{#1 = 179}{\definecolor{ansicolor@cur}{RGB}{215,175,95}}{}%
+	\ifthenelse{#1 = 178}{\definecolor{ansicolor@cur}{RGB}{215,175,  0}}{}%
+	\ifthenelse{#1 = 179}{\definecolor{ansicolor@cur}{RGB}{215,175, 95}}{}%
 	\ifthenelse{#1 = 180}{\definecolor{ansicolor@cur}{RGB}{215,175,135}}{}%
 	\ifthenelse{#1 = 181}{\definecolor{ansicolor@cur}{RGB}{215,175,175}}{}%
 	\ifthenelse{#1 = 182}{\definecolor{ansicolor@cur}{RGB}{215,175,215}}{}%
 	\ifthenelse{#1 = 183}{\definecolor{ansicolor@cur}{RGB}{215,175,255}}{}%
-	\ifthenelse{#1 = 184}{\definecolor{ansicolor@cur}{RGB}{215,215,0}}{}%
-	\ifthenelse{#1 = 185}{\definecolor{ansicolor@cur}{RGB}{215,215,95}}{}%
+	\ifthenelse{#1 = 184}{\definecolor{ansicolor@cur}{RGB}{215,215,  0}}{}%
+	\ifthenelse{#1 = 185}{\definecolor{ansicolor@cur}{RGB}{215,215, 95}}{}%
 	\ifthenelse{#1 = 186}{\definecolor{ansicolor@cur}{RGB}{215,215,135}}{}%
 	\ifthenelse{#1 = 187}{\definecolor{ansicolor@cur}{RGB}{215,215,175}}{}%
 	\ifthenelse{#1 = 188}{\definecolor{ansicolor@cur}{RGB}{215,215,215}}{}%
 	\ifthenelse{#1 = 189}{\definecolor{ansicolor@cur}{RGB}{215,215,255}}{}%
-	\ifthenelse{#1 = 190}{\definecolor{ansicolor@cur}{RGB}{215,255,0}}{}%
-	\ifthenelse{#1 = 191}{\definecolor{ansicolor@cur}{RGB}{215,255,95}}{}%
+	\ifthenelse{#1 = 190}{\definecolor{ansicolor@cur}{RGB}{215,255,  0}}{}%
+	\ifthenelse{#1 = 191}{\definecolor{ansicolor@cur}{RGB}{215,255, 95}}{}%
 	\ifthenelse{#1 = 192}{\definecolor{ansicolor@cur}{RGB}{215,255,135}}{}%
 	\ifthenelse{#1 = 193}{\definecolor{ansicolor@cur}{RGB}{215,255,175}}{}%
 	\ifthenelse{#1 = 194}{\definecolor{ansicolor@cur}{RGB}{215,255,215}}{}%
 	\ifthenelse{#1 = 195}{\definecolor{ansicolor@cur}{RGB}{215,255,255}}{}%
-	\ifthenelse{#1 = 196}{\definecolor{ansicolor@cur}{RGB}{255,0,0}}{}%
-	\ifthenelse{#1 = 197}{\definecolor{ansicolor@cur}{RGB}{255,0,95}}{}%
-	\ifthenelse{#1 = 198}{\definecolor{ansicolor@cur}{RGB}{255,0,135}}{}%
-	\ifthenelse{#1 = 199}{\definecolor{ansicolor@cur}{RGB}{255,0,175}}{}%
-	\ifthenelse{#1 = 200}{\definecolor{ansicolor@cur}{RGB}{255,0,215}}{}%
-	\ifthenelse{#1 = 201}{\definecolor{ansicolor@cur}{RGB}{255,0,255}}{}%
-	\ifthenelse{#1 = 202}{\definecolor{ansicolor@cur}{RGB}{255,95,0}}{}%
-	\ifthenelse{#1 = 203}{\definecolor{ansicolor@cur}{RGB}{255,95,95}}{}%
-	\ifthenelse{#1 = 204}{\definecolor{ansicolor@cur}{RGB}{255,95,135}}{}%
-	\ifthenelse{#1 = 205}{\definecolor{ansicolor@cur}{RGB}{255,95,175}}{}%
-	\ifthenelse{#1 = 206}{\definecolor{ansicolor@cur}{RGB}{255,95,215}}{}%
-	\ifthenelse{#1 = 207}{\definecolor{ansicolor@cur}{RGB}{255,95,255}}{}%
-	\ifthenelse{#1 = 208}{\definecolor{ansicolor@cur}{RGB}{255,135,0}}{}%
-	\ifthenelse{#1 = 209}{\definecolor{ansicolor@cur}{RGB}{255,135,95}}{}%
+	\ifthenelse{#1 = 196}{\definecolor{ansicolor@cur}{RGB}{255,  0,  0}}{}%
+	\ifthenelse{#1 = 197}{\definecolor{ansicolor@cur}{RGB}{255,  0, 95}}{}%
+	\ifthenelse{#1 = 198}{\definecolor{ansicolor@cur}{RGB}{255,  0,135}}{}%
+	\ifthenelse{#1 = 199}{\definecolor{ansicolor@cur}{RGB}{255,  0,175}}{}%
+	\ifthenelse{#1 = 200}{\definecolor{ansicolor@cur}{RGB}{255,  0,215}}{}%
+	\ifthenelse{#1 = 201}{\definecolor{ansicolor@cur}{RGB}{255,  0,255}}{}%
+	\ifthenelse{#1 = 202}{\definecolor{ansicolor@cur}{RGB}{255, 95,  0}}{}%
+	\ifthenelse{#1 = 203}{\definecolor{ansicolor@cur}{RGB}{255, 95, 95}}{}%
+	\ifthenelse{#1 = 204}{\definecolor{ansicolor@cur}{RGB}{255, 95,135}}{}%
+	\ifthenelse{#1 = 205}{\definecolor{ansicolor@cur}{RGB}{255, 95,175}}{}%
+	\ifthenelse{#1 = 206}{\definecolor{ansicolor@cur}{RGB}{255, 95,215}}{}%
+	\ifthenelse{#1 = 207}{\definecolor{ansicolor@cur}{RGB}{255, 95,255}}{}%
+	\ifthenelse{#1 = 208}{\definecolor{ansicolor@cur}{RGB}{255,135,  0}}{}%
+	\ifthenelse{#1 = 209}{\definecolor{ansicolor@cur}{RGB}{255,135, 95}}{}%
 	\ifthenelse{#1 = 210}{\definecolor{ansicolor@cur}{RGB}{255,135,135}}{}%
 	\ifthenelse{#1 = 211}{\definecolor{ansicolor@cur}{RGB}{255,135,175}}{}%
 	\ifthenelse{#1 = 212}{\definecolor{ansicolor@cur}{RGB}{255,135,215}}{}%
 	\ifthenelse{#1 = 213}{\definecolor{ansicolor@cur}{RGB}{255,135,255}}{}%
-	\ifthenelse{#1 = 214}{\definecolor{ansicolor@cur}{RGB}{255,175,0}}{}%
-	\ifthenelse{#1 = 215}{\definecolor{ansicolor@cur}{RGB}{255,175,95}}{}%
+	\ifthenelse{#1 = 214}{\definecolor{ansicolor@cur}{RGB}{255,175,  0}}{}%
+	\ifthenelse{#1 = 215}{\definecolor{ansicolor@cur}{RGB}{255,175, 95}}{}%
 	\ifthenelse{#1 = 216}{\definecolor{ansicolor@cur}{RGB}{255,175,135}}{}%
 	\ifthenelse{#1 = 217}{\definecolor{ansicolor@cur}{RGB}{255,175,175}}{}%
 	\ifthenelse{#1 = 218}{\definecolor{ansicolor@cur}{RGB}{255,175,215}}{}%
 	\ifthenelse{#1 = 219}{\definecolor{ansicolor@cur}{RGB}{255,175,255}}{}%
-	\ifthenelse{#1 = 220}{\definecolor{ansicolor@cur}{RGB}{255,215,0}}{}%
-	\ifthenelse{#1 = 221}{\definecolor{ansicolor@cur}{RGB}{255,215,95}}{}%
+	\ifthenelse{#1 = 220}{\definecolor{ansicolor@cur}{RGB}{255,215,  0}}{}%
+	\ifthenelse{#1 = 221}{\definecolor{ansicolor@cur}{RGB}{255,215, 95}}{}%
 	\ifthenelse{#1 = 222}{\definecolor{ansicolor@cur}{RGB}{255,215,135}}{}%
 	\ifthenelse{#1 = 223}{\definecolor{ansicolor@cur}{RGB}{255,215,175}}{}%
 	\ifthenelse{#1 = 224}{\definecolor{ansicolor@cur}{RGB}{255,215,215}}{}%
 	\ifthenelse{#1 = 225}{\definecolor{ansicolor@cur}{RGB}{255,215,255}}{}%
-	\ifthenelse{#1 = 226}{\definecolor{ansicolor@cur}{RGB}{255,255,0}}{}%
-	\ifthenelse{#1 = 227}{\definecolor{ansicolor@cur}{RGB}{255,255,95}}{}%
+	\ifthenelse{#1 = 226}{\definecolor{ansicolor@cur}{RGB}{255,255,  0}}{}%
+	\ifthenelse{#1 = 227}{\definecolor{ansicolor@cur}{RGB}{255,255, 95}}{}%
 	\ifthenelse{#1 = 228}{\definecolor{ansicolor@cur}{RGB}{255,255,135}}{}%
 	\ifthenelse{#1 = 229}{\definecolor{ansicolor@cur}{RGB}{255,255,175}}{}%
 	\ifthenelse{#1 = 230}{\definecolor{ansicolor@cur}{RGB}{255,255,215}}{}%
 	\ifthenelse{#1 = 231}{\definecolor{ansicolor@cur}{RGB}{255,255,255}}{}%
-	\ifthenelse{#1 = 232}{\definecolor{ansicolor@cur}{RGB}{8,8,8}}{}%
-	\ifthenelse{#1 = 233}{\definecolor{ansicolor@cur}{RGB}{18,18,18}}{}%
-	\ifthenelse{#1 = 234}{\definecolor{ansicolor@cur}{RGB}{28,28,28}}{}%
-	\ifthenelse{#1 = 235}{\definecolor{ansicolor@cur}{RGB}{38,38,38}}{}%
-	\ifthenelse{#1 = 236}{\definecolor{ansicolor@cur}{RGB}{48,48,48}}{}%
-	\ifthenelse{#1 = 237}{\definecolor{ansicolor@cur}{RGB}{58,58,58}}{}%
-	\ifthenelse{#1 = 238}{\definecolor{ansicolor@cur}{RGB}{68,68,68}}{}%
-	\ifthenelse{#1 = 239}{\definecolor{ansicolor@cur}{RGB}{78,78,78}}{}%
-	\ifthenelse{#1 = 240}{\definecolor{ansicolor@cur}{RGB}{88,88,88}}{}%
-	\ifthenelse{#1 = 241}{\definecolor{ansicolor@cur}{RGB}{98,98,98}}{}%
+	\ifthenelse{#1 = 232}{\definecolor{ansicolor@cur}{RGB}{  8,  8,  8}}{}%
+	\ifthenelse{#1 = 233}{\definecolor{ansicolor@cur}{RGB}{ 18, 18, 18}}{}%
+	\ifthenelse{#1 = 234}{\definecolor{ansicolor@cur}{RGB}{ 28, 28, 28}}{}%
+	\ifthenelse{#1 = 235}{\definecolor{ansicolor@cur}{RGB}{ 38, 38, 38}}{}%
+	\ifthenelse{#1 = 236}{\definecolor{ansicolor@cur}{RGB}{ 48, 48, 48}}{}%
+	\ifthenelse{#1 = 237}{\definecolor{ansicolor@cur}{RGB}{ 58, 58, 58}}{}%
+	\ifthenelse{#1 = 238}{\definecolor{ansicolor@cur}{RGB}{ 68, 68, 68}}{}%
+	\ifthenelse{#1 = 239}{\definecolor{ansicolor@cur}{RGB}{ 78, 78, 78}}{}%
+	\ifthenelse{#1 = 240}{\definecolor{ansicolor@cur}{RGB}{ 88, 88, 88}}{}%
+	\ifthenelse{#1 = 241}{\definecolor{ansicolor@cur}{RGB}{ 98, 98, 98}}{}%
 	\ifthenelse{#1 = 242}{\definecolor{ansicolor@cur}{RGB}{108,108,108}}{}%
 	\ifthenelse{#1 = 243}{\definecolor{ansicolor@cur}{RGB}{118,118,118}}{}%
 	\ifthenelse{#1 = 244}{\definecolor{ansicolor@cur}{RGB}{128,128,128}}{}%
